src/Javafe/trunk/src/test/resources/Public.java
class Public extends p.Private {}	// error: Private not accessible here
